qtdoc-opensource-src (5.1.0-2) UNRELEASED; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Properly clean the build. Thanks Dmitry Shachnev!
  * Change versions in rules.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 11 Aug 2013 12:24:13 -0300

qtdoc-opensource-src (5.1.0-1) experimental; urgency=low

  * New upstream release.
  * Remove qtbase docs from build dependencies and dependencies of the
    packages. We are not currently building them.
  * Update watch file.
  * Remove qtwebkit-examples' docs from build dependencies and dependencies of
    the packages. We didn't get the repack ready on time.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 09 Aug 2013 21:35:16 -0300

qtdoc-opensource-src (5.0.2-1) experimental; urgency=low

  * Initial release. (Closes: #697509)

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 20 Jun 2013 20:45:35 -0300