@@ -4,6 +4,10 @@ qtdoc-opensource-src (5.1.0-2) UNRELEASED; urgency=low
   * Properly clean the build. Thanks Dmitry Shachnev!
   * Change versions in rules.
 
+  [ Dmitry Shachnev ]
+  * Drop the dh_compress hack, it no longer works now that xz
+    is the default compression.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 11 Aug 2013 12:24:13 -0300
 
 qtdoc-opensource-src (5.1.0-1) experimental; urgency=low
